Fixed arrows with visibility: hidden

--- a/src/components/ImageCarousel/ImageCarousel.module.css
+++ b/src/components/ImageCarousel/ImageCarousel.module.css
@@ -33,7 +33,7 @@
 }
 
 .arrow_container > .hidden {
-    display: none;
+    visibility: hidden;
 }
 
 .img_indicator {
